# chist

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
docs/: shell-wrapper.zsh
src/: config.rs  formatters.rs  main.rs  models.rs  path_utils.rs  session_reader.rs
